# fheroes2-wasm

./: CMakeLists.txt
src/engine/: CMakeLists.txt  endian_h2.h  screen.cpp  screen.h  system.cpp
src/fheroes2/: CMakeLists.txt
src/fheroes2/game/: fheroes2.cpp
src/fheroes2/system/: settings.cpp
test/: download-demo.js  shell.html  shell2.html
